48: Refactor code, add tests
