# src/api/docs/swagger.json
@@ -55,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/middleware.AuthSucess"
                         }
                     }
                 }
@@ -291,7 +291,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "string"
+                                "$ref": "#/definitions/controllers.ComponentStatus"
                             }
                         }
                     }
@@ -357,7 +357,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/middleware.AuthSucess"
                         }
                     }
                 }
@@ -553,6 +553,17 @@
                 }
             }
         },
+        "controllers.ComponentStatus": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.GetUserNameResponse": {
             "type": "object",
             "properties": {
@@ -632,6 +643,9 @@
         "controllers.ShortJob": {
             "type": "object",
             "properties": {
+                "created": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -665,6 +679,20 @@
                 },
                 "timestamp": {
                     "type": "integer"
+                }
+            }
+        },
+        "middleware.AuthSucess": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "expire": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         },
